--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2c1af5a5",
    "metadata": {},
    "source": [
     "# Homework 2"
@@ -10,20 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "a79e781c",
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "/home/jonny/anaconda3/lib/python3.7/site-packages/_cvxcore.cpython-37m-x86_64-linux-gnu.so: undefined symbol: _ZSt28__throw_bad_array_new_lengthv",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-cc4db01367c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0m__version__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"1.1.18\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterface\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscipy_wrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstraints\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPSD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSOC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNonPos\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZero\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m from cvxpy.error import (DCPError, DGPError, DPPError, SolverError,\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/atoms/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \"\"\"\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m from cvxpy.atoms.affine.binary_operators import (matmul, multiply,\n\u001b[0m\u001b[1;32m     18\u001b[0m                                                  scalar_product,)\n\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmat\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbmat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/atoms/affine/binary_operators.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mlu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutilities\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_expr\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAddExpression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine_atom\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAffAtom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconj\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/atoms/affine/add_expr.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlin_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mlu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutilities\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maffine_atom\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAffAtom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstraint\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConstraint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/atoms/affine/affine_atom.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutilities\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matom\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAtom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcvxcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcanonInterface\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpressions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstants\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConstant\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutilities\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mperformance_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mperf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/cvxpy/cvxcore/python/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TODO(akshayka): This is a hack; the swig-auto-generated cvxcore.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# tries to import cvxcore as `from . import _cvxcore`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0m_cvxcore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: /home/jonny/anaconda3/lib/python3.7/site-packages/_cvxcore.cpython-37m-x86_64-linux-gnu.so: undefined symbol: _ZSt28__throw_bad_array_new_lengthv"
+     ]
+    }
+   ],
    "source": [
-    "import cvxpy as cp\n",
     "import numpy as np\n",
+    "import cvxpy as cp\n",
     "import matplotlib.pyplot as plt\n",
     "import csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f02f7c30",
    "metadata": {},
    "source": [
     "## Exercise 1"
@@ -31,8 +46,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 194,
-   "id": "cd5751ac",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "4833a08a",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82d9e722",
    "metadata": {},
    "source": [
     "## Exercise 2"
@@ -115,7 +134,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eab7db5",
    "metadata": {},
    "source": [
     "2-a\n",
@@ -138,7 +156,6 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "6d5b954e",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "f462c091",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +207,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b498278",
    "metadata": {},
    "source": [
     "2-d\n",
@@ -220,7 +235,6 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "8e63dcec",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "aa0dd16b",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +320,6 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "deff0a7e",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +356,6 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "dc20a86a",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +389,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea639ac",
    "metadata": {},
    "source": [
     "## Exercise 3"
@@ -387,7 +397,6 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "6ffde717",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +434,6 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "720f4cf6",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "7e8ac78b",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +500,6 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "1d878197",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +524,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b008081",
    "metadata": {},
    "source": [
     "## Exercise 4"
@@ -527,7 +532,6 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "94aa8a42",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "391b215b",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +625,6 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "08c9e80a",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +658,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d1e1f6",
    "metadata": {},
    "source": [
     "#4-b-i\n",
@@ -675,14 +676,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#4-b-ii\n",
+    "\n",
+    "For equation 3, the first order condition is :\n",
+    "- $\\nabla_{\\theta}\\mathcal{L}(\\theta^{*},\\lambda^{*})=0$\n",
+    "- $||\\theta^{*}||_{2}^{2}=0$\n",
+    "\n",
+    "For equation 3, we have $g(\\theta)=\\alpha - ||\\theta||_{2}^{2}\\geq0$, and the Lagrangian multiplier is $\\gamma_{\\alpha}$, therefore, first order condition is :\n",
+    "- $\\nabla_{\\theta}\\mathcal{L}(\\theta,\\gamma_{\\alpha})=0$\n",
+    "- $g_{i}(\\theta)\\geq 0$\n",
+    "- $\\gamma_{\\alpha_{i}} \\geq 0$\n",
+    "- $\\gamma_{\\alpha_{i}}g_{i}(\\theta) = 0$\n",
+    "\n",
+    "For equation 5, we have $g(\\theta)=\\epsilon - ||X\\theta-y||_{2}^{2}\\geq 0$, and the Lagrangian multiplier is $\\gamma_{\\epsilon}$, therefore, first order condition is :\n",
+    "- $\\nabla_{\\theta}\\mathcal{L}(\\theta,\\gamma_{\\epsilon})=0$\n",
+    "- $g_{i}(\\theta)\\geq 0$\n",
+    "- $\\gamma_{\\epsilon_{i}} \\geq 0$\n",
+    "- $\\gamma_{\\epsilon_{i}}g_{i}(\\theta) = 0$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-81eadf6e734d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#4-a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlamda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my_male\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmale_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0my_female\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfemale_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_male\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_female\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#4-a\n",
+    "lamda = 3\n",
+    "y_male = np.matrix(np.ones(male_data.shape[0])).T\n",
+    "y_female = np.matrix(-1*np.ones(female_data.shape[0])).T\n",
+    "y = np.vstack((y_male,y_female))\n",
+    "X = np.vstack((male_data,female_data))\n",
+    "bias = np.matrix(np.ones(y.shape[0]))\n",
+    "X=np.vstack((X.T,bias)).T\n",
+    "N=y.shape[0]\n",
+    "print(X.shape)\n",
+    "theta_norm = []\n",
+    "loss_norm = []\n",
+    "for each in lamda:\n",
+    "    theta_tmp = np.linalg.inv(X.T@X+each*np.eye(X.shape[1]))@X.T@y\n",
+    "    norm_tmp = np.linalg.norm(np.dot(X, theta_tmp)-y)**2/N\n",
+    "    norm_theta = np.linalg.norm(theta_tmp)**2/N\n",
+    "    loss_norm.append(norm_tmp)\n",
+    "    theta_norm.append(norm_theta)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4912401a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#4-b-ii"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -701,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
